{
  "version": 4,
  "terraform_version": "1.14.4",
  "serial": 32,
  "lineage": "4bfdb3ab-b1a9-e704-13db-00acd5f6749c",
  "resources": [
    {
      "module": "module.compute",
      "mode": "managed",
      "type": "google_compute_instance",
      "name": "historian",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 6,
          "attributes": {
            "boot_disk": [
              {
                "auto_delete": true,
                "device_name": "persistent-disk-0",
                "initialize_params": [
                  {
                    "enable_confidential_compute": false,
                    "image": "https://www.googleapis.com/compute/v1/projects/debian-cloud/global/images/debian-12-bookworm-v20260114",
                    "provisioned_iops": 0,
                    "provisioned_throughput": 0,
                    "size": 10,
                    "type": "pd-standard"
                  }
                ],
                "mode": "READ_WRITE",
                "source": "https://www.googleapis.com/compute/v1/projects/oticsproject-486001/zones/us-central1-a/disks/historian-server"
              }
            ],
            "can_ip_forward": false,
            "cpu_platform": "Intel Broadwell",
            "current_status": "RUNNING",
            "deletion_protection": false,
            "description": "Historian Server - Purdue Level 3 (Operations Zone)",
            "effective_labels": {
              "environment": "dev",
              "project": "ics-security-lab",
              "role": "historian",
              "zone": "operations"
            },
            "enable_display": false,
            "id": "projects/oticsproject-486001/zones/us-central1-a/instances/historian-server",
            "instance_id": "4224568541674789592",
            "label_fingerprint": "LRwzEVDnLhA=",
            "labels": {
              "environment": "dev",
              "project": "ics-security-lab",
              "role": "historian",
              "zone": "operations"
            },
            "machine_type": "e2-micro",
            "metadata": {
              "enable-oslogin": "FALSE"
            },
            "metadata_fingerprint": "LMRxhm5e6ng=",
            "metadata_startup_script": "#!/bin/bash\napt-get update\napt-get install -y curl wget net-tools tcpdump python3 python3-pip\n    \ncat \u003e /etc/motd \u003c\u003c 'BANNER'\n╔═══════════════════════════════════════════════════════════════════╗\n║           HISTORIAN SERVER                                        ║\n║           Purdue Level 3 - Operations Zone (DMZ)                  ║\n╠═══════════════════════════════════════════════════════════════════╣\n║  This server collects data  [...]
            "name": "historian-server",
            "network_interface": [
              {
                "internal_ipv6_prefix_length": 0,
                "name": "nic0",
                "network": "https://www.googleapis.com/compute/v1/projects/oticsproject-486001/global/networks/operations-vpc",
                "network_ip": "10.1.0.10",
                "queue_count": 0,
                "stack_type": "IPV4_ONLY",
                "subnetwork": "https://www.googleapis.com/compute/v1/projects/oticsproject-486001/regions/us-central1/subnetworks/operations-subnet",
                "subnetwork_project": "oticsproject-486001"
              }
            ],
            "project": "oticsproject-486001",
            "scheduling": [
              {
                "automatic_restart": true,
                "min_node_cpus": 0,
                "on_host_maintenance": "MIGRATE",
                "preemptible": false,
                "provisioning_model": "STANDARD"
              }
            ],
            "self_link": "https://www.googleapis.com/compute/v1/projects/oticsproject-486001/zones/us-central1-a/instances/historian-server",
            "service_account": [
              {
                "email": "737315695047-compute@developer.gserviceaccount.com",
                "scopes": [
                  "https://www.googleapis.com/auth/cloud-platform"
                ]
              }
            ],
            "shielded_instance_config": [
              {
                "enable_integrity_monitoring": true,
                "enable_secure_boot": false,
                "enable_vtpm": true
              }
            ],
            "tags": [
              "historian",
              "operations-zone",
              "security-monitor"
            ],
            "tags_fingerprint": "bgh7WPsNovE=",
            "terraform_labels": {
              "environment": "dev",
              "project": "ics-security-lab",
              "role": "historian",
              "zone": "operations"
            },
            "zone": "us-central1-a"
          },
          "sensitive_attributes": [
            [
              {
                "type": "get_attr",
                "value": "boot_disk"
              },
              {
                "type": "index",
                "value": {
                  "value": 0,
                  "type": "number"
                }
              },
              {
                "type": "get_attr",
                "value": "disk_encryption_key_raw"
              }
            ]
          ],
          "identity_schema_version": 0,
          "dependencies": [
            "module.network.google_compute_network.operations",
            "module.network.google_compute_subnetwork.operations"
          ]
        }
      ]
    },
    {
      "module": "module.compute",
      "mode": "managed",
      "type": "google_compute_instance",
      "name": "hmi_simulator",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 6,
          "attributes": {
            "boot_disk": [
              {
                "auto_delete": true,
                "device_name": "persistent-disk-0",
                "initialize_params": [
                  {
                    "enable_confidential_compute": false,
                    "image": "https://www.googleapis.com/compute/v1/projects/debian-cloud/global/images/debian-12-bookworm-v20260114",
                    "provisioned_iops": 0,
                    "provisioned_throughput": 0,
                    "size": 10,
                    "type": "pd-standard"
                  }
                ],
                "mode": "READ_WRITE",
                "source": "https://www.googleapis.com/compute/v1/projects/oticsproject-486001/zones/us-central1-a/disks/hmi-simulator"
              }
            ],
            "can_ip_forward": false,
            "cpu_platform": "Intel Broadwell",
            "current_status": "RUNNING",
            "deletion_protection": false,
            "description": "HMI Simulator - Purdue Level 2 (Control Zone)",
            "effective_labels": {
              "environment": "dev",
              "project": "ics-security-lab",
              "role": "hmi",
              "zone": "control"
            },
            "enable_display": false,
            "id": "projects/oticsproject-486001/zones/us-central1-a/instances/hmi-simulator",
            "instance_id": "7308931363209534167",
            "label_fingerprint": "MgSLv5QFpF8=",
            "labels": {
              "environment": "dev",
              "project": "ics-security-lab",
              "role": "hmi",
              "zone": "control"
            },
            "machine_type": "e2-micro",
            "metadata": {
              "enable-oslogin": "FALSE"
            },
            "metadata_fingerprint": "_BfRpWiCZVY=",
            "metadata_startup_script": "#!/bin/bash\napt-get update\napt-get install -y curl wget net-tools python3 python3-pip\n    \ncat \u003e /etc/motd \u003c\u003c 'BANNER'\n╔═══════════════════════════════════════════════════════════════════╗\n║           HMI SIMULATOR                                           ║\n║           Purdue Level 2 - Control Zone                          ║\n╠═══════════════════════════════════════════════════════════════════╣\n║  This system simulates a Human-Machi [...]
            "name": "hmi-simulator",
            "network_interface": [
              {
                "internal_ipv6_prefix_length": 0,
                "name": "nic0",
                "network": "https://www.googleapis.com/compute/v1/projects/oticsproject-486001/global/networks/control-vpc",
                "network_ip": "10.2.0.20",
                "queue_count": 0,
                "stack_type": "IPV4_ONLY",
                "subnetwork": "https://www.googleapis.com/compute/v1/projects/oticsproject-486001/regions/us-central1/subnetworks/control-subnet",
                "subnetwork_project": "oticsproject-486001"
              }
            ],
            "project": "oticsproject-486001",
            "scheduling": [
              {
                "automatic_restart": true,
                "min_node_cpus": 0,
                "on_host_maintenance": "MIGRATE",
                "preemptible": false,
                "provisioning_model": "STANDARD"
              }
            ],
            "self_link": "https://www.googleapis.com/compute/v1/projects/oticsproject-486001/zones/us-central1-a/instances/hmi-simulator",
            "service_account": [
              {
                "email": "737315695047-compute@developer.gserviceaccount.com",
                "scopes": [
                  "https://www.googleapis.com/auth/logging.write",
                  "https://www.googleapis.com/auth/monitoring.write"
                ]
              }
            ],
            "shielded_instance_config": [
              {
                "enable_integrity_monitoring": true,
                "enable_secure_boot": false,
                "enable_vtpm": true
              }
            ],
            "tags": [
              "control-zone",
              "hmi",
              "plc"
            ],
            "tags_fingerprint": "MhMRihKjjQQ=",
            "terraform_labels": {
              "environment": "dev",
              "project": "ics-security-lab",
              "role": "hmi",
              "zone": "control"
            },
            "zone": "us-central1-a"
          },
          "sensitive_attributes": [
            [
              {
                "type": "get_attr",
                "value": "boot_disk"
              },
              {
                "type": "index",
                "value": {
                  "value": 0,
                  "type": "number"
                }
              },
              {
                "type": "get_attr",
                "value": "disk_encryption_key_raw"
              }
            ]
          ],
          "identity_schema_version": 0,
          "dependencies": [
            "module.network.google_compute_network.control",
            "module.network.google_compute_subnetwork.control"
          ]
        }
      ]
    },
    {
      "module": "module.compute",
      "mode": "managed",
      "type": "google_compute_instance",
      "name": "jump_host",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 6,
          "attributes": {
            "boot_disk": [
              {
                "auto_delete": true,
                "device_name": "persistent-disk-0",
                "initialize_params": [
                  {
                    "enable_confidential_compute": false,
                    "image": "https://www.googleapis.com/compute/v1/projects/debian-cloud/global/images/debian-12-bookworm-v20260114",
                    "provisioned_iops": 0,
                    "provisioned_throughput": 0,
                    "size": 10,
                    "type": "pd-standard"
                  }
                ],
                "mode": "READ_WRITE",
                "source": "https://www.googleapis.com/compute/v1/projects/oticsproject-486001/zones/us-central1-a/disks/jump-host"
              }
            ],
            "can_ip_forward": false,
            "cpu_platform": "Intel Broadwell",
            "current_status": "RUNNING",
            "deletion_protection": false,
            "description": "Jump Host / Bastion - Entry point to ICS Security Lab",
            "effective_labels": {
              "environment": "dev",
              "project": "ics-security-lab",
              "role": "jump-host",
              "zone": "enterprise"
            },
            "enable_display": false,
            "id": "projects/oticsproject-486001/zones/us-central1-a/instances/jump-host",
            "instance_id": "5109435025599814360",
            "label_fingerprint": "nDQ8GaOkQGk=",
            "labels": {
              "environment": "dev",
              "project": "ics-security-lab",
              "role": "jump-host",
              "zone": "enterprise"
            },
            "machine_type": "e2-micro",
            "metadata": {
              "enable-oslogin": "FALSE"
            },
            "metadata_fingerprint": "K-sK6iLw8Z0=",
            "metadata_startup_script": "#!/bin/bash\napt-get update\napt-get install -y curl wget net-tools dnsutils tcpdump nmap\n    \n# Create a banner\ncat \u003e /etc/motd \u003c\u003c 'BANNER'\n╔═══════════════════════════════════════════════════════════════════╗\n║           ICS SECURITY LAB - JUMP HOST                            ║\n║           Purdue Level 4/5 - Enterprise Zone                      ║\n╠═══════════════════════════════════════════════════════════════════╣\n║  From here you [...]
            "name": "jump-host",
            "network_interface": [
              {
                "access_config": [
                  {
                    "nat_ip": "35.223.69.99",
                    "network_tier": "PREMIUM"
                  }
                ],
                "internal_ipv6_prefix_length": 0,
                "name": "nic0",
                "network": "https://www.googleapis.com/compute/v1/projects/oticsproject-486001/global/networks/enterprise-vpc",
                "network_ip": "10.0.0.2",
                "queue_count": 0,
                "stack_type": "IPV4_ONLY",
                "subnetwork": "https://www.googleapis.com/compute/v1/projects/oticsproject-486001/regions/us-central1/subnetworks/enterprise-subnet",
                "subnetwork_project": "oticsproject-486001"
              }
            ],
            "project": "oticsproject-486001",
            "scheduling": [
              {
                "automatic_restart": true,
                "min_node_cpus": 0,
                "on_host_maintenance": "MIGRATE",
                "preemptible": false,
                "provisioning_model": "STANDARD"
              }
            ],
            "self_link": "https://www.googleapis.com/compute/v1/projects/oticsproject-486001/zones/us-central1-a/instances/jump-host",
            "service_account": [
              {
                "email": "737315695047-compute@developer.gserviceaccount.com",
                "scopes": [
                  "https://www.googleapis.com/auth/cloud-platform"
                ]
              }
            ],
            "shielded_instance_config": [
              {
                "enable_integrity_monitoring": true,
                "enable_secure_boot": false,
                "enable_vtpm": true
              }
            ],
            "tags": [
              "enterprise-zone",
              "jump-host"
            ],
            "tags_fingerprint": "WyWqEo9Q9k0=",
            "terraform_labels": {
              "environment": "dev",
              "project": "ics-security-lab",
              "role": "jump-host",
              "zone": "enterprise"
            },
            "zone": "us-central1-a"
          },
          "sensitive_attributes": [
            [
              {
                "type": "get_attr",
                "value": "boot_disk"
              },
              {
                "type": "index",
                "value": {
                  "value": 0,
                  "type": "number"
                }
              },
              {
                "type": "get_attr",
                "value": "disk_encryption_key_raw"
              }
            ]
          ],
          "identity_schema_version": 0,
          "dependencies": [
            "module.network.google_compute_network.enterprise",
            "module.network.google_compute_subnetwork.enterprise"
          ]
        }
      ]
    },
    {
      "module": "module.compute",
      "mode": "managed",
      "type": "google_compute_instance",
      "name": "plc_simulator",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 6,
          "attributes": {
            "boot_disk": [
              {
                "auto_delete": true,
                "device_name": "persistent-disk-0",
                "initialize_params": [
                  {
                    "enable_confidential_compute": false,
                    "image": "https://www.googleapis.com/compute/v1/projects/debian-cloud/global/images/debian-12-bookworm-v20260114",
                    "provisioned_iops": 0,
                    "provisioned_throughput": 0,
                    "size": 10,
                    "type": "pd-standard"
                  }
                ],
                "mode": "READ_WRITE",
                "source": "https://www.googleapis.com/compute/v1/projects/oticsproject-486001/zones/us-central1-a/disks/plc-simulator"
              }
            ],
            "can_ip_forward": false,
            "cpu_platform": "Intel Broadwell",
            "current_status": "RUNNING",
            "deletion_protection": false,
            "description": "PLC Simulator - Purdue Level 1/2 (Control Zone)",
            "effective_labels": {
              "environment": "dev",
              "project": "ics-security-lab",
              "role": "plc",
              "zone": "control"
            },
            "enable_display": false,
            "id": "projects/oticsproject-486001/zones/us-central1-a/instances/plc-simulator",
            "instance_id": "615645468605602519",
            "label_fingerprint": "VC2mdULY49U=",
            "labels": {
              "environment": "dev",
              "project": "ics-security-lab",
              "role": "plc",
              "zone": "control"
            },
            "machine_type": "e2-micro",
            "metadata": {
              "enable-oslogin": "FALSE"
            },
            "metadata_fingerprint": "2lBOyOd-42Q=",
            "metadata_startup_script": "#!/bin/bash\napt-get update\napt-get install -y curl wget net-tools python3 python3-pip\n    \ncat \u003e /etc/motd \u003c\u003c 'BANNER'\n╔═══════════════════════════════════════════════════════════════════╗\n║           PLC SIMULATOR                                           ║\n║           Purdue Level 1/2 - Control Zone                        ║\n╠═══════════════════════════════════════════════════════════════════╣\n║  This system simulates a Programmabl [...]
            "name": "plc-simulator",
            "network_interface": [
              {
                "internal_ipv6_prefix_length": 0,
                "name": "nic0",
                "network": "https://www.googleapis.com/compute/v1/projects/oticsproject-486001/global/networks/control-vpc",
                "network_ip": "10.2.0.10",
                "queue_count": 0,
                "stack_type": "IPV4_ONLY",
                "subnetwork": "https://www.googleapis.com/compute/v1/projects/oticsproject-486001/regions/us-central1/subnetworks/control-subnet",
                "subnetwork_project": "oticsproject-486001"
              }
            ],
            "project": "oticsproject-486001",
            "scheduling": [
              {
                "automatic_restart": true,
                "min_node_cpus": 0,
                "on_host_maintenance": "MIGRATE",
                "preemptible": false,
                "provisioning_model": "STANDARD"
              }
            ],
            "self_link": "https://www.googleapis.com/compute/v1/projects/oticsproject-486001/zones/us-central1-a/instances/plc-simulator",
            "service_account": [
              {
                "email": "737315695047-compute@developer.gserviceaccount.com",
                "scopes": [
                  "https://www.googleapis.com/auth/logging.write",
                  "https://www.googleapis.com/auth/monitoring.write"
                ]
              }
            ],
            "shielded_instance_config": [
              {
                "enable_integrity_monitoring": true,
                "enable_secure_boot": false,
                "enable_vtpm": true
              }
            ],
            "tags": [
              "control-zone",
              "hmi",
              "plc"
            ],
            "tags_fingerprint": "MhMRihKjjQQ=",
            "terraform_labels": {
              "environment": "dev",
              "project": "ics-security-lab",
              "role": "plc",
              "zone": "control"
            },
            "zone": "us-central1-a"
          },
          "sensitive_attributes": [
            [
              {
                "type": "get_attr",
                "value": "boot_disk"
              },
              {
                "type": "index",
                "value": {
                  "value": 0,
                  "type": "number"
                }
              },
              {
                "type": "get_attr",
                "value": "disk_encryption_key_raw"
              }
            ]
          ],
          "identity_schema_version": 0,
          "dependencies": [
            "module.network.google_compute_network.control",
            "module.network.google_compute_subnetwork.control"
          ]
        }
      ]
    },
    {
      "module": "module.compute",
      "mode": "managed",
      "type": "google_compute_instance",
      "name": "security_monitor",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 6,
          "attributes": {
            "boot_disk": [
              {
                "auto_delete": true,
                "device_name": "persistent-disk-0",
                "initialize_params": [
                  {
                    "enable_confidential_compute": false,
                    "image": "https://www.googleapis.com/compute/v1/projects/debian-cloud/global/images/debian-12-bookworm-v20260114",
                    "provisioned_iops": 0,
                    "provisioned_throughput": 0,
                    "size": 20,
                    "type": "pd-standard"
                  }
                ],
                "mode": "READ_WRITE",
                "source": "https://www.googleapis.com/compute/v1/projects/oticsproject-486001/zones/us-central1-a/disks/security-monitor"
              }
            ],
            "can_ip_forward": false,
            "cpu_platform": "Intel Broadwell",
            "current_status": "RUNNING",
            "deletion_protection": false,
            "description": "Security Monitoring Server - Purdue Level 3 (Operations Zone)",
            "effective_labels": {
              "environment": "dev",
              "project": "ics-security-lab",
              "role": "security-monitor",
              "zone": "operations"
            },
            "enable_display": false,
            "id": "projects/oticsproject-486001/zones/us-central1-a/instances/security-monitor",
            "instance_id": "1754521511031528152",
            "label_fingerprint": "brUL1MCryHo=",
            "labels": {
              "environment": "dev",
              "project": "ics-security-lab",
              "role": "security-monitor",
              "zone": "operations"
            },
            "machine_type": "e2-micro",
            "metadata": {
              "enable-oslogin": "FALSE"
            },
            "metadata_fingerprint": "y9tYd-kTOe0=",
            "metadata_startup_script": "#!/bin/bash\napt-get update\napt-get install -y curl wget net-tools tcpdump rsyslog\n    \n# Configure rsyslog to receive logs from Control zone\ncat \u003e\u003e /etc/rsyslog.conf \u003c\u003c 'SYSLOG'\n# Receive syslog from Control Zone\nmodule(load=\"imudp\")\ninput(type=\"imudp\" port=\"514\")\nmodule(load=\"imtcp\")\ninput(type=\"imtcp\" port=\"514\")\nSYSLOG\n    \nsystemctl restart rsyslog\n    \ncat \u003e /etc/motd \u003c\u003c 'BANNER'\n╔════════ [...]
            "name": "security-monitor",
            "network_interface": [
              {
                "internal_ipv6_prefix_length": 0,
                "name": "nic0",
                "network": "https://www.googleapis.com/compute/v1/projects/oticsproject-486001/global/networks/operations-vpc",
                "network_ip": "10.1.0.20",
                "queue_count": 0,
                "stack_type": "IPV4_ONLY",
                "subnetwork": "https://www.googleapis.com/compute/v1/projects/oticsproject-486001/regions/us-central1/subnetworks/operations-subnet",
                "subnetwork_project": "oticsproject-486001"
              }
            ],
            "project": "oticsproject-486001",
            "scheduling": [
              {
                "automatic_restart": true,
                "min_node_cpus": 0,
                "on_host_maintenance": "MIGRATE",
                "preemptible": false,
                "provisioning_model": "STANDARD"
              }
            ],
            "self_link": "https://www.googleapis.com/compute/v1/projects/oticsproject-486001/zones/us-central1-a/instances/security-monitor",
            "service_account": [
              {
                "email": "737315695047-compute@developer.gserviceaccount.com",
                "scopes": [
                  "https://www.googleapis.com/auth/cloud-platform"
                ]
              }
            ],
            "shielded_instance_config": [
              {
                "enable_integrity_monitoring": true,
                "enable_secure_boot": false,
                "enable_vtpm": true
              }
            ],
            "tags": [
              "historian",
              "operations-zone",
              "security-monitor"
            ],
            "tags_fingerprint": "bgh7WPsNovE=",
            "terraform_labels": {
              "environment": "dev",
              "project": "ics-security-lab",
              "role": "security-monitor",
              "zone": "operations"
            },
            "zone": "us-central1-a"
          },
          "sensitive_attributes": [
            [
              {
                "type": "get_attr",
                "value": "boot_disk"
              },
              {
                "type": "index",
                "value": {
                  "value": 0,
                  "type": "number"
                }
              },
              {
                "type": "get_attr",
                "value": "disk_encryption_key_raw"
              }
            ]
          ],
          "identity_schema_version": 0,
          "dependencies": [
            "module.network.google_compute_network.operations",
            "module.network.google_compute_subnetwork.operations"
          ]
        }
      ]
    },
    {
      "module": "module.firewall",
      "mode": "managed",
      "type": "google_compute_firewall",
      "name": "control_allow_egress_internal",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "allow": [
              {
                "ports": [],
                "protocol": "all"
              }
            ],
            "creation_timestamp": "2026-01-30T18:08:44.260-08:00",
            "deny": [],
            "description": "Allow egress within Control zone",
            "destination_ranges": [
              "10.2.0.0/24"
            ],
            "direction": "EGRESS",
            "disabled": false,
            "enable_logging": null,
            "id": "projects/oticsproject-486001/global/firewalls/control-allow-egress-internal",
            "log_config": [],
            "name": "control-allow-egress-internal",
            "network": "https://www.googleapis.com/compute/v1/projects/oticsproject-486001/global/networks/control-vpc",
            "priority": 1000,
            "project": "oticsproject-486001",
            "self_link": "https://www.googleapis.com/compute/v1/projects/oticsproject-486001/global/firewalls/control-allow-egress-internal",
            "source_ranges": null,
            "source_service_accounts": null,
            "source_tags": null,
            "target_service_accounts": null,
            "target_tags": [
              "control-zone"
            ],
            "timeouts": null
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "module.network.google_compute_network.control"
          ]
        }
      ]
    },
    {
      "module": "module.firewall",
      "mode": "managed",
      "type": "google_compute_firewall",
      "name": "control_allow_egress_to_operations",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "allow": [
              {
                "ports": [
                  "514",
                  "1514",
                  "443"
                ],
                "protocol": "tcp"
              },
              {
                "ports": [
                  "514"
                ],
                "protocol": "udp"
              },
              {
                "ports": [],
                "protocol": "icmp"
              }
            ],
            "creation_timestamp": "2026-01-30T18:08:33.546-08:00",
            "deny": [],
            "description": "Allow egress from Control zone only to Operations zone",
            "destination_ranges": [
              "10.1.0.0/24"
            ],
            "direction": "EGRESS",
            "disabled": false,
            "enable_logging": null,
            "id": "projects/oticsproject-486001/global/firewalls/control-allow-egress-to-operations",
            "log_config": [],
            "name": "control-allow-egress-to-operations",
            "network": "https://www.googleapis.com/compute/v1/projects/oticsproject-486001/global/networks/control-vpc",
            "priority": 1000,
            "project": "oticsproject-486001",
            "self_link": "https://www.googleapis.com/compute/v1/projects/oticsproject-486001/global/firewalls/control-allow-egress-to-operations",
            "source_ranges": null,
            "source_service_accounts": null,
            "source_tags": null,
            "target_service_accounts": null,
            "target_tags": [
              "control-zone"
            ],
            "timeouts": null
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "module.network.google_compute_network.control"
          ]
        }
      ]
    },
    {
      "module": "module.firewall",
      "mode": "managed",
      "type": "google_compute_firewall",
      "name": "control_allow_internal",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "allow": [
              {
                "ports": [
                  "502",
                  "4840",
                  "102"
                ],
                "protocol": "tcp"
              },
              {
                "ports": [],
                "protocol": "icmp"
              }
            ],
            "creation_timestamp": "2026-01-30T18:08:44.538-08:00",
            "deny": [],
            "description": "Allow communication within Control zone (PLC \u003c-\u003e HMI)",
            "destination_ranges": [],
            "direction": "INGRESS",
            "disabled": false,
            "enable_logging": null,
            "id": "projects/oticsproject-486001/global/firewalls/control-allow-internal",
            "log_config": [],
            "name": "control-allow-internal",
            "network": "https://www.googleapis.com/compute/v1/projects/oticsproject-486001/global/networks/control-vpc",
            "priority": 1000,
            "project": "oticsproject-486001",
            "self_link": "https://www.googleapis.com/compute/v1/projects/oticsproject-486001/global/firewalls/control-allow-internal",
            "source_ranges": [
              "10.2.0.0/24"
            ],
            "source_service_accounts": null,
            "source_tags": null,
            "target_service_accounts": null,
            "target_tags": [
              "control-zone"
            ],
            "timeouts": null
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "module.network.google_compute_network.control"
          ]
        }
      ]
    },
    {
      "module": "module.firewall",
      "mode": "managed",
      "type": "google_compute_firewall",
      "name": "control_allow_modbus_from_operations",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "allow": [
              {
                "ports": [
                  "502"
                ],
                "protocol": "tcp"
              }
            ],
            "creation_timestamp": "2026-01-30T18:08:43.598-08:00",
            "deny": [],
            "description": "Allow Modbus/TCP (port 502) from Operations to Control zone",
            "destination_ranges": [],
            "direction": "INGRESS",
            "disabled": false,
            "enable_logging": null,
            "id": "projects/oticsproject-486001/global/firewalls/control-allow-modbus-from-operations",
            "log_config": [
              {
                "metadata": "INCLUDE_ALL_METADATA"
              }
            ],
            "name": "control-allow-modbus-from-operations",
            "network": "https://www.googleapis.com/compute/v1/projects/oticsproject-486001/global/networks/control-vpc",
            "priority": 1000,
            "project": "oticsproject-486001",
            "self_link": "https://www.googleapis.com/compute/v1/projects/oticsproject-486001/global/firewalls/control-allow-modbus-from-operations",
            "source_ranges": [
              "10.1.0.0/24"
            ],
            "source_service_accounts": null,
            "source_tags": null,
            "target_service_accounts": null,
            "target_tags": [
              "plc"
            ],
            "timeouts": null
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "module.network.google_compute_network.control"
          ]
        }
      ]
    },
    {
      "module": "module.firewall",
      "mode": "managed",
      "type": "google_compute_firewall",
      "name": "control_allow_opcua_from_operations",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "allow": [
              {
                "ports": [
                  "4840"
                ],
                "protocol": "tcp"
              }
            ],
            "creation_timestamp": "2026-01-30T18:08:43.443-08:00",
            "deny": [],
            "description": "Allow OPC-UA (port 4840) from Operations to Control zone",
            "destination_ranges": [],
            "direction": "INGRESS",
            "disabled": false,
            "enable_logging": null,
            "id": "projects/oticsproject-486001/global/firewalls/control-allow-opcua-from-operations",
            "log_config": [
              {
                "metadata": "INCLUDE_ALL_METADATA"
              }
            ],
            "name": "control-allow-opcua-from-operations",
            "network": "https://www.googleapis.com/compute/v1/projects/oticsproject-486001/global/networks/control-vpc",
            "priority": 1000,
            "project": "oticsproject-486001",
            "self_link": "https://www.googleapis.com/compute/v1/projects/oticsproject-486001/global/firewalls/control-allow-opcua-from-operations",
            "source_ranges": [
              "10.1.0.0/24"
            ],
            "source_service_accounts": null,
            "source_tags": null,
            "target_service_accounts": null,
            "target_tags": [
              "hmi",
              "plc"
            ],
            "timeouts": null
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "module.network.google_compute_network.control"
          ]
        }
      ]
    },
    {
      "module": "module.firewall",
      "mode": "managed",
      "type": "google_compute_firewall",
      "name": "control_allow_ssh_from_operations",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "allow": [
              {
                "ports": [
                  "22"
                ],
                "protocol": "tcp"
              }
            ],
            "creation_timestamp": "2026-01-30T18:08:43.463-08:00",
            "deny": [],
            "description": "Allow SSH from Operations zone to Control zone (NO direct Enterprise access)",
            "destination_ranges": [],
            "direction": "INGRESS",
            "disabled": false,
            "enable_logging": null,
            "id": "projects/oticsproject-486001/global/firewalls/control-allow-ssh-from-operations",
            "log_config": [
              {
                "metadata": "INCLUDE_ALL_METADATA"
              }
            ],
            "name": "control-allow-ssh-from-operations",
            "network": "https://www.googleapis.com/compute/v1/projects/oticsproject-486001/global/networks/control-vpc",
            "priority": 1000,
            "project": "oticsproject-486001",
            "self_link": "https://www.googleapis.com/compute/v1/projects/oticsproject-486001/global/firewalls/control-allow-ssh-from-operations",
            "source_ranges": [
              "10.1.0.0/24"
            ],
            "source_service_accounts": null,
            "source_tags": null,
            "target_service_accounts": null,
            "target_tags": [
              "control-zone"
            ],
            "timeouts": null
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "module.network.google_compute_network.control"
          ]
        }
      ]
    },
    {
      "module": "module.firewall",
      "mode": "managed",
      "type": "google_compute_firewall",
      "name": "control_deny_all_other",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "allow": [],
            "creation_timestamp": "2026-01-30T18:08:43.224-08:00",
            "deny": [
              {
                "ports": [],
                "protocol": "all"
              }
            ],
            "description": "Deny all other traffic to Control zone (default deny)",
            "destination_ranges": [],
            "direction": "INGRESS",
            "disabled": false,
            "enable_logging": null,
            "id": "projects/oticsproject-486001/global/firewalls/control-deny-all-other",
            "log_config": [
              {
                "metadata": "INCLUDE_ALL_METADATA"
              }
            ],
            "name": "control-deny-all-other",
            "network": "https://www.googleapis.com/compute/v1/projects/oticsproject-486001/global/networks/control-vpc",
            "priority": 65534,
            "project": "oticsproject-486001",
            "self_link": "https://www.googleapis.com/compute/v1/projects/oticsproject-486001/global/firewalls/control-deny-all-other",
            "source_ranges": [
              "0.0.0.0/0"
            ],
            "source_service_accounts": null,
            "source_tags": null,
            "target_service_accounts": null,
            "target_tags": [
              "control-zone"
            ],
            "timeouts": null
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "module.network.google_compute_network.control"
          ]
        }
      ]
    },
    {
      "module": "module.firewall",
      "mode": "managed",
      "type": "google_compute_firewall",
      "name": "control_deny_egress_internet",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "allow": [],
            "creation_timestamp": "2026-01-30T18:08:43.515-08:00",
            "deny": [
              {
                "ports": [],
                "protocol": "all"
              }
            ],
            "description": "Deny internet egress from Control zone (air-gap simulation)",
            "destination_ranges": [
              "0.0.0.0/0"
            ],
            "direction": "EGRESS",
            "disabled": false,
            "enable_logging": null,
            "id": "projects/oticsproject-486001/global/firewalls/control-deny-egress-internet",
            "log_config": [
              {
                "metadata": "INCLUDE_ALL_METADATA"
              }
            ],
            "name": "control-deny-egress-internet",
            "network": "https://www.googleapis.com/compute/v1/projects/oticsproject-486001/global/networks/control-vpc",
            "priority": 65534,
            "project": "oticsproject-486001",
            "self_link": "https://www.googleapis.com/compute/v1/projects/oticsproject-486001/global/firewalls/control-deny-egress-internet",
            "source_ranges": null,
            "source_service_accounts": null,
            "source_tags": null,
            "target_service_accounts": null,
            "target_tags": [
              "control-zone"
            ],
            "timeouts": null
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "module.network.google_compute_network.control"
          ]
        }
      ]
    },
    {
      "module": "module.firewall",
      "mode": "managed",
      "type": "google_compute_firewall",
      "name": "control_deny_from_enterprise",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "allow": [],
            "creation_timestamp": "2026-01-30T18:08:44.396-08:00",
            "deny": [
              {
                "ports": [],
                "protocol": "all"
              }
            ],
            "description": "DENY all traffic directly from Enterprise to Control (Purdue Model enforcement)",
            "destination_ranges": [],
            "direction": "INGRESS",
            "disabled": false,
            "enable_logging": null,
            "id": "projects/oticsproject-486001/global/firewalls/control-deny-from-enterprise",
            "log_config": [
              {
                "metadata": "INCLUDE_ALL_METADATA"
              }
            ],
            "name": "control-deny-from-enterprise",
            "network": "https://www.googleapis.com/compute/v1/projects/oticsproject-486001/global/networks/control-vpc",
            "priority": 900,
            "project": "oticsproject-486001",
            "self_link": "https://www.googleapis.com/compute/v1/projects/oticsproject-486001/global/firewalls/control-deny-from-enterprise",
            "source_ranges": [
              "10.0.0.0/24"
            ],
            "source_service_accounts": null,
            "source_tags": null,
            "target_service_accounts": null,
            "target_tags": [
              "control-zone"
            ],
            "timeouts": null
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "module.network.google_compute_network.control"
          ]
        }
      ]
    },
    {
      "module": "module.firewall",
      "mode": "managed",
      "type": "google_compute_firewall",
      "name": "enterprise_allow_iap",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "allow": [
              {
                "ports": [
                  "22"
                ],
                "protocol": "tcp"
              }
            ],
            "creation_timestamp": "2026-01-30T18:08:22.221-08:00",
            "deny": [],
            "description": "Allow SSH via Identity-Aware Proxy (more secure than direct SSH)",
            "destination_ranges": [],
            "direction": "INGRESS",
            "disabled": false,
            "enable_logging": null,
            "id": "projects/oticsproject-486001/global/firewalls/enterprise-allow-iap",
            "log_config": [],
            "name": "enterprise-allow-iap",
            "network": "https://www.googleapis.com/compute/v1/projects/oticsproject-486001/global/networks/enterprise-vpc",
            "priority": 1000,
            "project": "oticsproject-486001",
            "self_link": "https://www.googleapis.com/compute/v1/projects/oticsproject-486001/global/firewalls/enterprise-allow-iap",
            "source_ranges": [
              "35.235.240.0/20"
            ],
            "source_service_accounts": null,
            "source_tags": null,
            "target_service_accounts": null,
            "target_tags": [
              "jump-host"
            ],
            "timeouts": null
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "module.network.google_compute_network.enterprise"
          ]
        }
      ]
    },
    {
      "module": "module.firewall",
      "mode": "managed",
      "type": "google_compute_firewall",
      "name": "enterprise_allow_icmp_internal",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "allow": [
              {
                "ports": [],
                "protocol": "icmp"
              }
            ],
            "creation_timestamp": "2026-01-30T18:08:22.211-08:00",
            "deny": [],
            "description": "Allow ICMP within Enterprise zone for diagnostics",
            "destination_ranges": [],
            "direction": "INGRESS",
            "disabled": false,
            "enable_logging": null,
            "id": "projects/oticsproject-486001/global/firewalls/enterprise-allow-icmp-internal",
            "log_config": [],
            "name": "enterprise-allow-icmp-internal",
            "network": "https://www.googleapis.com/compute/v1/projects/oticsproject-486001/global/networks/enterprise-vpc",
            "priority": 1000,
            "project": "oticsproject-486001",
            "self_link": "https://www.googleapis.com/compute/v1/projects/oticsproject-486001/global/firewalls/enterprise-allow-icmp-internal",
            "source_ranges": [
              "10.0.0.0/24"
            ],
            "source_service_accounts": null,
            "source_tags": null,
            "target_service_accounts": null,
            "target_tags": [
              "enterprise-zone"
            ],
            "timeouts": null
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "module.network.google_compute_network.enterprise"
          ]
        }
      ]
    },
    {
      "module": "module.firewall",
      "mode": "managed",
      "type": "google_compute_firewall",
      "name": "enterprise_allow_ssh_external",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "allow": [
              {
                "ports": [
                  "22"
                ],
                "protocol": "tcp"
              }
            ],
            "creation_timestamp": "2026-01-30T18:08:22.159-08:00",
            "deny": [],
            "description": "Allow SSH access to jump host from allowed external IPs",
            "destination_ranges": [],
            "direction": "INGRESS",
            "disabled": false,
            "enable_logging": null,
            "id": "projects/oticsproject-486001/global/firewalls/enterprise-allow-ssh-external",
            "log_config": [
              {
                "metadata": "INCLUDE_ALL_METADATA"
              }
            ],
            "name": "enterprise-allow-ssh-external",
            "network": "https://www.googleapis.com/compute/v1/projects/oticsproject-486001/global/networks/enterprise-vpc",
            "priority": 1000,
            "project": "oticsproject-486001",
            "self_link": "https://www.googleapis.com/compute/v1/projects/oticsproject-486001/global/firewalls/enterprise-allow-ssh-external",
            "source_ranges": [
              "0.0.0.0/0"
            ],
            "source_service_accounts": null,
            "source_tags": null,
            "target_service_accounts": null,
            "target_tags": [
              "jump-host"
            ],
            "timeouts": null
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "module.network.google_compute_network.enterprise"
          ]
        }
      ]
    },
    {
      "module": "module.firewall",
      "mode": "managed",
      "type": "google_compute_firewall",
      "name": "operations_allow_https_from_enterprise",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "allow": [
              {
                "ports": [
                  "443",
                  "8443"
                ],
                "protocol": "tcp"
              }
            ],
            "creation_timestamp": "2026-01-30T18:08:32.361-08:00",
            "deny": [],
            "description": "Allow HTTPS from Enterprise to Operations (historian web UI)",
            "destination_ranges": [],
            "direction": "INGRESS",
            "disabled": false,
            "enable_logging": null,
            "id": "projects/oticsproject-486001/global/firewalls/operations-allow-https-from-enterprise",
            "log_config": [
              {
                "metadata": "INCLUDE_ALL_METADATA"
              }
            ],
            "name": "operations-allow-https-from-enterprise",
            "network": "https://www.googleapis.com/compute/v1/projects/oticsproject-486001/global/networks/operations-vpc",
            "priority": 1000,
            "project": "oticsproject-486001",
            "self_link": "https://www.googleapis.com/compute/v1/projects/oticsproject-486001/global/firewalls/operations-allow-https-from-enterprise",
            "source_ranges": [
              "10.0.0.0/24"
            ],
            "source_service_accounts": null,
            "source_tags": null,
            "target_service_accounts": null,
            "target_tags": [
              "historian"
            ],
            "timeouts": null
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "module.network.google_compute_network.operations"
          ]
        }
      ]
    },
    {
      "module": "module.firewall",
      "mode": "managed",
      "type": "google_compute_firewall",
      "name": "operations_allow_icmp_internal",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "allow": [
              {
                "ports": [],
                "protocol": "icmp"
              }
            ],
            "creation_timestamp": "2026-01-30T18:08:32.381-08:00",
            "deny": [],
            "description": "Allow ICMP within Operations zone",
            "destination_ranges": [],
            "direction": "INGRESS",
            "disabled": false,
            "enable_logging": null,
            "id": "projects/oticsproject-486001/global/firewalls/operations-allow-icmp-internal",
            "log_config": [],
            "name": "operations-allow-icmp-internal",
            "network": "https://www.googleapis.com/compute/v1/projects/oticsproject-486001/global/networks/operations-vpc",
            "priority": 1000,
            "project": "oticsproject-486001",
            "self_link": "https://www.googleapis.com/compute/v1/projects/oticsproject-486001/global/firewalls/operations-allow-icmp-internal",
            "source_ranges": [
              "10.0.0.0/24",
              "10.1.0.0/24"
            ],
            "source_service_accounts": null,
            "source_tags": null,
            "target_service_accounts": null,
            "target_tags": [
              "operations-zone"
            ],
            "timeouts": null
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "module.network.google_compute_network.operations"
          ]
        }
      ]
    },
    {
      "module": "module.firewall",
      "mode": "managed",
      "type": "google_compute_firewall",
      "name": "operations_allow_ssh_from_enterprise",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "allow": [
              {
                "ports": [
                  "22"
                ],
                "protocol": "tcp"
              }
            ],
            "creation_timestamp": "2026-01-30T18:08:32.281-08:00",
            "deny": [],
            "description": "Allow SSH from Enterprise zone to Operations zone",
            "destination_ranges": [],
            "direction": "INGRESS",
            "disabled": false,
            "enable_logging": null,
            "id": "projects/oticsproject-486001/global/firewalls/operations-allow-ssh-from-enterprise",
            "log_config": [
              {
                "metadata": "INCLUDE_ALL_METADATA"
              }
            ],
            "name": "operations-allow-ssh-from-enterprise",
            "network": "https://www.googleapis.com/compute/v1/projects/oticsproject-486001/global/networks/operations-vpc",
            "priority": 1000,
            "project": "oticsproject-486001",
            "self_link": "https://www.googleapis.com/compute/v1/projects/oticsproject-486001/global/firewalls/operations-allow-ssh-from-enterprise",
            "source_ranges": [
              "10.0.0.0/24"
            ],
            "source_service_accounts": null,
            "source_tags": null,
            "target_service_accounts": null,
            "target_tags": [
              "operations-zone"
            ],
            "timeouts": null
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "module.network.google_compute_network.operations"
          ]
        }
      ]
    },
    {
      "module": "module.firewall",
      "mode": "managed",
      "type": "google_compute_firewall",
      "name": "operations_allow_syslog_from_control",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "allow": [
              {
                "ports": [
                  "514",
                  "1514"
                ],
                "protocol": "tcp"
              },
              {
                "ports": [
                  "514"
                ],
                "protocol": "udp"
              }
            ],
            "creation_timestamp": "2026-01-30T18:08:32.244-08:00",
            "deny": [],
            "description": "Allow syslog from Control zone to security monitoring",
            "destination_ranges": [],
            "direction": "INGRESS",
            "disabled": false,
            "enable_logging": null,
            "id": "projects/oticsproject-486001/global/firewalls/operations-allow-syslog-from-control",
            "log_config": [
              {
                "metadata": "INCLUDE_ALL_METADATA"
              }
            ],
            "name": "operations-allow-syslog-from-control",
            "network": "https://www.googleapis.com/compute/v1/projects/oticsproject-486001/global/networks/operations-vpc",
            "priority": 1000,
            "project": "oticsproject-486001",
            "self_link": "https://www.googleapis.com/compute/v1/projects/oticsproject-486001/global/firewalls/operations-allow-syslog-from-control",
            "source_ranges": [
              "10.2.0.0/24"
            ],
            "source_service_accounts": null,
            "source_tags": null,
            "target_service_accounts": null,
            "target_tags": [
              "security-monitor"
            ],
            "timeouts": null
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "module.network.google_compute_network.operations"
          ]
        }
      ]
    },
    {
      "module": "module.network",
      "mode": "managed",
      "type": "google_compute_network",
      "name": "control",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "auto_create_subnetworks": false,
            "delete_default_routes_on_create": false,
            "description": "Control Zone - Purdue Level 1/2 (Industrial Control Systems)",
            "enable_ula_internal_ipv6": false,
            "id": "projects/oticsproject-486001/global/networks/control-vpc",
            "mtu": 0,
            "name": "control-vpc",
            "network_firewall_policy_enforcement_order": "AFTER_CLASSIC_FIREWALL",
            "numeric_id": "1720387425950292708",
            "project": "oticsproject-486001",
            "routing_mode": "REGIONAL",
            "self_link": "https://www.googleapis.com/compute/v1/projects/oticsproject-486001/global/networks/control-vpc"
          },
          "identity_schema_version": 0
        }
      ]
    },
    {
      "module": "module.network",
      "mode": "managed",
      "type": "google_compute_network",
      "name": "enterprise",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "auto_create_subnetworks": false,
            "delete_default_routes_on_create": false,
            "description": "Enterprise Zone - Purdue Level 4/5 (Corporate Network)",
            "enable_ula_internal_ipv6": false,
            "id": "projects/oticsproject-486001/global/networks/enterprise-vpc",
            "mtu": 0,
            "name": "enterprise-vpc",
            "network_firewall_policy_enforcement_order": "AFTER_CLASSIC_FIREWALL",
            "numeric_id": "8002677029437758180",
            "project": "oticsproject-486001",
            "routing_mode": "REGIONAL",
            "self_link": "https://www.googleapis.com/compute/v1/projects/oticsproject-486001/global/networks/enterprise-vpc"
          },
          "identity_schema_version": 0
        }
      ]
    },
    {
      "module": "module.network",
      "mode": "managed",
      "type": "google_compute_network",
      "name": "operations",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "auto_create_subnetworks": false,
            "delete_default_routes_on_create": false,
            "description": "Operations Zone - Purdue Level 3 (DMZ)",
            "enable_ula_internal_ipv6": false,
            "id": "projects/oticsproject-486001/global/networks/operations-vpc",
            "mtu": 0,
            "name": "operations-vpc",
            "network_firewall_policy_enforcement_order": "AFTER_CLASSIC_FIREWALL",
            "numeric_id": "1063190020150581988",
            "project": "oticsproject-486001",
            "routing_mode": "REGIONAL",
            "self_link": "https://www.googleapis.com/compute/v1/projects/oticsproject-486001/global/networks/operations-vpc"
          },
          "identity_schema_version": 0
        }
      ]
    },
    {
      "module": "module.network",
      "mode": "managed",
      "type": "google_compute_subnetwork",
      "name": "control",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "creation_timestamp": "2026-01-30T18:08:33.426-08:00",
            "description": "Control subnet for PLC and HMI systems",
            "gateway_address": "10.2.0.1",
            "id": "projects/oticsproject-486001/regions/us-central1/subnetworks/control-subnet",
            "ip_cidr_range": "10.2.0.0/24",
            "log_config": [
              {
                "aggregation_interval": "INTERVAL_5_SEC",
                "filter_expr": "true",
                "flow_sampling": 0.5,
                "metadata": "INCLUDE_ALL_METADATA"
              }
            ],
            "name": "control-subnet",
            "network": "https://www.googleapis.com/compute/v1/projects/oticsproject-486001/global/networks/control-vpc",
            "private_ip_google_access": false,
            "private_ipv6_google_access": "DISABLE_GOOGLE_ACCESS",
            "project": "oticsproject-486001",
            "purpose": "PRIVATE",
            "region": "us-central1",
            "self_link": "https://www.googleapis.com/compute/v1/projects/oticsproject-486001/regions/us-central1/subnetworks/control-subnet",
            "stack_type": "IPV4_ONLY"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.network.google_compute_network.control"
          ]
        }
      ]
    },
    {
      "module": "module.network",
      "mode": "managed",
      "type": "google_compute_subnetwork",
      "name": "enterprise",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "creation_timestamp": "2026-01-30T18:08:22.861-08:00",
            "description": "Enterprise subnet for corporate systems and jump host",
            "gateway_address": "10.0.0.1",
            "id": "projects/oticsproject-486001/regions/us-central1/subnetworks/enterprise-subnet",
            "ip_cidr_range": "10.0.0.0/24",
            "log_config": [
              {
                "aggregation_interval": "INTERVAL_5_SEC",
                "filter_expr": "true",
                "flow_sampling": 0.5,
                "metadata": "INCLUDE_ALL_METADATA"
              }
            ],
            "name": "enterprise-subnet",
            "network": "https://www.googleapis.com/compute/v1/projects/oticsproject-486001/global/networks/enterprise-vpc",
            "private_ip_google_access": false,
            "private_ipv6_google_access": "DISABLE_GOOGLE_ACCESS",
            "project": "oticsproject-486001",
            "purpose": "PRIVATE",
            "region": "us-central1",
            "self_link": "https://www.googleapis.com/compute/v1/projects/oticsproject-486001/regions/us-central1/subnetworks/enterprise-subnet",
            "stack_type": "IPV4_ONLY"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.network.google_compute_network.enterprise"
          ]
        }
      ]
    },
    {
      "module": "module.network",
      "mode": "managed",
      "type": "google_compute_subnetwork",
      "name": "operations",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "creation_timestamp": "2026-01-30T18:08:32.480-08:00",
            "description": "Operations subnet for historian and security monitoring",
            "gateway_address": "10.1.0.1",
            "id": "projects/oticsproject-486001/regions/us-central1/subnetworks/operations-subnet",
            "ip_cidr_range": "10.1.0.0/24",
            "log_config": [
              {
                "aggregation_interval": "INTERVAL_5_SEC",
                "filter_expr": "true",
                "flow_sampling": 0.5,
                "metadata": "INCLUDE_ALL_METADATA"
              }
            ],
            "name": "operations-subnet",
            "network": "https://www.googleapis.com/compute/v1/projects/oticsproject-486001/global/networks/operations-vpc",
            "private_ip_google_access": false,
            "private_ipv6_google_access": "DISABLE_GOOGLE_ACCESS",
            "project": "oticsproject-486001",
            "purpose": "PRIVATE",
            "region": "us-central1",
            "self_link": "https://www.googleapis.com/compute/v1/projects/oticsproject-486001/regions/us-central1/subnetworks/operations-subnet",
            "stack_type": "IPV4_ONLY"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.network.google_compute_network.operations"
          ]
        }
      ]
    }
  ]
}